SET( KIT packed )
SET( DIR ${SOURCE_CODE_BASE_DIR}/${KIT}/test )
FILE( GLOB source ${DIR}/*_test.cpp )
FILE( GLOB extras ${DIR}/*.cpp ${DIR}/*.h )
ADD_EXECUTABLE( ${CMAKE_PROJECT_NAME}_test_${KIT} ${source} )
TARGET_LINK_LIBRARIES( ${CMAKE_PROJECT_NAME}_test_${KIT} comma_base comma_string ${comma_ALL_EXTERNAL_LIBRARIES} ${GTEST_BOTH_LIBRARIES} )

INSTALL ( 
    FILES ${PROJECT_BINARY_DIR}/bin/${CMAKE_PROJECT_NAME}_test_${KIT}
    PERMISSIONS WORLD_READ GROUP_READ OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_EXECUTE WORLD_EXECUTE
    DESTINATION ${comma_CPP_TESTS_INSTALL_DIR} )

add_test( NAME ${CMAKE_PROJECT_NAME}_test_${KIT} COMMAND ${CMAKE_PROJECT_NAME}_test_${KIT} WORKING_DIRECTORY ${PROJECT_BINARY_DIR}/bin )
