project( comma-csv-sample-application )
cmake_minimum_required( VERSION 3.1 )
add_compile_options( -std=c++14 )
find_package( comma REQUIRED PATHS "/usr/local/CMakeFiles" )
add_executable( comma-csv-sample-application-append comma-csv-sample-application-append.cpp )
target_link_libraries( comma-csv-sample-application-append ${comma_ALL_LIBRARIES} )
add_executable( comma-csv-sample-application-emplace comma-csv-sample-application-emplace.cpp )
target_link_libraries( comma-csv-sample-application-emplace ${comma_ALL_LIBRARIES} )
